resources/css/index.css
/* ... */
.header-container {
  width: 90%;
  margin: 0 auto;
  text-align: center;
}

#openingHeader {
  color: white;
  word-wrap: normal;
  font-size: 100px;
  text-align: center;
  font-family: "Lucida Console";
  line-height: 90%;
  font-weight: 900;
  height: 80%;
  right: 23%;
  top: 28.5%;
  background-color: transparent;
  padding: 10px;
  position: absolute;
}

#openingHeader {
  -webkit-text-stroke: 1px white;
  color: black;
  text-shadow:
    3px 3px 0 white,
    -1px -1px 0 white,
    1px -1px 0 white,
    -1px 1px 0 white,
    1px 1px 0 white;
  text-shadow: 2px 2px 8px rgb(11, 185, 205);
}

#quickQuote {
  color: black;
  font-size: 26px;
  text-align: center;
  font-family: "Lucida Console";
  font-style: italic;
  font-weight: 300;
  background-color: transparent;
  margin-top: 5px;
  position: absolute;
  top: 73%;
  width: 100%;
}


.pictureFrame {
  background: black;
  padding: 15px 13px;
  right: 11%;
  top: 21%;
  position: absolute;
  z-index: 0;
  box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.5);
  max-width: 360px;
  height: 55%;
  width: 22%;
  margin-bottom: 20px;
  overflow: hidden;
}

#openingPic {
  height: 100%;
  width: 100%;
}
.pictureFrame img {
  object-fit: cover;
  object-position: center;
  filter: brightness(1.1);
  /* scale: 1.1; */
}
/* .pictureFrame::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.1);
  pointer-events: none;
} */
/* .pictureFrame img {
  width: 100%;
  height: auto;
  object-fit: cover;
 transition: transform 0.3s ease-in-out; 
} */

/* .pictureFrame img:hover {
  -webkit-transform: scale(0.993);
  transform: scale(0.993);
  opacity: 0.75;
}

.pictureFrame:hover .caption {
  color: white;
  font-size: 25px;
  font-weight: 200;
  padding: 5px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
} */


.hangingLight {
  background-color: transparent;
  width: 155px;
  height: 255px;
  display: block;
  position: absolute;
  left: calc(18% - 18px);
  transform: translateX(-50%);
}

.name {
  position: absolute;
  width: 550px;
  height: 500px;
  right: 43%;
  align-items: center;
  text-align: center;
  margin-bottom: 20px;

}


/* The Modal (background) */
.modal {
  display: none;
  position: fixed;
  z-index: 1;
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.9);
}

/* Modal Content (image) */
.modal-content {
  margin: auto;
  display: block;
  width: 80%;
  height: 90%;
  max-width: 700px;
  margin-bottom: 100px;
  background-color: black;

}

/* Caption of Modal Image */
/* #caption {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
    text-align: center;
    color: #ccc;
    padding: 10px 0;
    height: 150px;
} */

/* Add Animation */
.modal-content,
#caption {
  -webkit-animation-name: zoom;
  -webkit-animation-duration: 0.6s;
  animation-name: zoom;
  animation-duration: 0.6s;

}

@-webkit-keyframes zoom {
  from {
    -webkit-transform: scale(0)
  }

  to {
    -webkit-transform: scale(1)
  }
}

@keyframes zoom {
  from {
    transform: scale(0)
  }

  to {
    transform: scale(1)
  }
}

/* The Close Button */
.close {
  position: absolute;
  top: 15px;
  right: 35px;
  color: #f1f1f1;
  font-size: 40px;
  font-weight: bold;
  transition: 0.3s;
  height: 30px;
}

.close:hover,
.close:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
  height: 30px;
}


/* 100% Image Width on Smaller Screens */
@media only screen and (max-width: 700px) {
  .modal-content {
    width: 100%;
  }
}

/***********************************************************/
/* Media query for smaller screens */
@media (max-width: 960px) {
  .name{
    left: 40%;
    transform: translateX(-50%);
    width: 100%;
  }

  .hangingLight {
    height: 40%;
    position: absolute;
    left: calc(36% - 2px);
    transform: translateX(-50%);
  }

  #openingHeader {
    font-size: 4em;
    right: 0;
    position: absolute;
    height: auto;
    width: 100%;
    top: 19.5vh;
  }

  #quickQuote {
    font-size: 1.5em;
    top: 50vh;
    width: 100%;
    padding: 15px 20px 15px 15px;
    left: 1%
  }

  .pictureFrame {
    width: 20%;
    height: auto;
    padding: 10px;
    left: 85%;
    transform: translateX(-50%);
    position: absolute;
    top: 5vh;
  }

  .caption {
    display: none;
  }
}

@media (max-width: 940px) {
  .name {
    left: 40%;
    transform: translateX(-50%);
    width: 100%;
  }

  .hangingLight {
    height: 40%;
    position: absolute;
    left: calc(36% - 2px);
    transform: translateX(-50%);
  }

  #openingHeader {
    font-size: 4em;
    right: 0;
    position: absolute;
    height: auto;
    width: 100%;
    top: 28vh;
  }

  #quickQuote {
    font-size: 1.5em;
    top: 68vh;
    width: 100%;
    padding: 15px 20px 15px 15px;
    left: 1%
  }

  .pictureFrame {
    width: 20%;
    height: auto;
    padding: 10px;
    left: 85%;
    transform: translateX(-50%);
    position: absolute;
    /* margin: 1rem auto 2rem; */
    top: 5vh;
  }

  .caption {
    display: none;
  }
}

@media (max-width: 845px) {
  .name {
    left: 43%;
    transform: translateX(-50%);
    width: 100%;
  }

  .hangingLight {
    height: 40%;
    left: calc(36% - 19px);
    transform: translateX(-50%);
  }

  #openingHeader {
    font-size: 4em;
    right: 0;
    position: absolute;
    height: auto;
    width: 100%;
    top: 30vh;
  }

  #quickQuote {
    font-size: 1.5em;
    top: 70vh;
    width: calc(100% - 90px);
    padding: 15px 20px;
    left: 50%;
    transform: translateX(-50%);
  }

  .pictureFrame {
    width: 20%;
    height: auto;
    padding: 10px;
    left: 85%;
    transform: translateX(-50%);
    position: absolute;
    top: 9vh;
  }
}
/* ... */

